Updated the navbar and hero section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="logo">
             <a href="index.html">
               <img
-                src="./assets/SwiftTaskNoBG.png"
+                src="./assets/logo.png"
                 class="logo-img"
                 alt="logo"
               />
@@ -55,16 +55,16 @@
       <section class="hero-section">
         <div class="container">
           <div class="hero-content">
-            <h1 class="hero-heading text-xxl text-center">
+            <h1 class="hero-heading text-xxl">
               Supercharge Your Productivity with AI!
             </h1>
-            <p class="hero-subtext text-md text-center">
+            <p class="hero-subtext text-md">
               Automate tasks, manage schedules, and boost efficiency—all in one
               smart platform.
             </p>
-            <div class="hero-buttons text-center">
-              <a href="#" class="btn">Get Started for Free</a>
-              <a href="#" class="btn">Watch a Demo</a>
+            <div class="hero-buttons">
+              <a href="#" class="btn btn-primary">Get Started for Free</a>
+              <a href="#" class="btn btn-secondary">Watch a Demo</a>
             </div>
           </div>
         </div>
